# Twilight

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  config.production.toml  docker-compose.images.yml  docker-compose.prod.yml  docker-compose.yml  flake.nix  go.mod  go.sum  main.py  pyproject.toml  start_all.sh  start_backend_dev.sh  start_backend_prod.sh
.github/: dependabot.yml
.github/workflows/: docker-images.yml  tests.yml
cmd/twilight/: main.go
deploy/: nginx-rate-limit.conf  nginx-twilight.conf  twilight-bot.service  twilight-scheduler.service  twilight.service
deploy/docker/: config.docker.toml  entrypoint.sh  init-db.sql
docs/: API_INDEX.md  API_KEY_API.md  BACKEND_API.md  BACKGROUND.md  DEVELOPER_WORKFLOW.md  DEVELOPMENT.md  FRONTEND.md  GO_BACKEND.md  INSTALL.md  INVITE_AND_ANNOUNCEMENTS.md  QUICKSTART-Windows.md  README.md  REGCODES.md  SECURITY.md  TG_BOT_COMMANDS.md  VERSION_HISTORY.md  changelog.md
docs/features/: email.md  regcodes.md  telegram-bot.md
docs/guides/: development.md  docker.md  install.md  security.md
docs/reference/: api-index.md  backend-api.md  backend.md  developer-js.md
internal/api/: admin_extra.go  admin_jobs.go  admin_user_refresh.go  admin_user_refresh_test.go  apikey_handlers.go  app.go  app_test.go  audit_handlers.go  auth_handlers.go  bangumi_client.go  bangumi_sync_handlers.go  bangumi_webhook.go  batch_helpers.go  batch_user_handlers.go  business.go  code_use_handlers.go  config_admin.go  config_admin_replace_test.go  confirm_phrases.go  database_admin.go  developer_handlers.go  developer_sandbox_test.go  email_client.go  email_handlers.go  email_verify_service.go  email_verify_service_test.go  emby.go  emby_client.go  emby_inventory.go  emby_library.go  emby_url_probe.go  errcode.go  handlers.go  http_json_client.go  invite_admin_handlers.go  invite_handlers.go  library_handlers.go  media_request_handlers.go  media_service.go  ratelimit.go  (+28 more)
internal/config/: config.go  config_test.go
internal/redis/: redis.go
internal/security/: password.go  password_test.go
internal/store/: device.go  device_limit_test.go  email_verification.go  email_verification_test.go  postgres_test.go  rebind_test.go  regcode_update_test.go  scheduler.go  scheduler_test.go  signin.go  signin_test.go  store.go  store_test.go
internal/validate/: validate.go
src/: __init__.py  config.py
src/api/: __init__.py
src/api/v1/: __init__.py  admin.py  apikey.py  auth.py  demo.py  invite.py  system.py  (+1 more)
src/bot/: __init__.py  bot.py
src/db/: invite.py  regcode.py  scheduler_run.py  scheduler_schedule.py
src/services/: admin_service.py  emby_register_queue.py  emby_service.py  invite_service.py  regcode_use_queue.py  scheduler_service.py  security_service.py  user_service.py
webui/: .env.example  Dockerfile  add_keys.mjs  check_placeholders.mjs  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  scan_hardcoded.mjs  tsconfig.tsbuildinfo
webui/src/: middleware.ts
(+74 files in other folders)
